<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.AddUserActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="15"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_permanent_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/enter_street_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPermanentStreetName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/enter_region_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPermanentRegionName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_temporary_address" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/enter_street_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTemporaryStreetName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:hint="@string/enter_region_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTemporaryRegionName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="15"
                    android:textSize="@dimen/text_size" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="false"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>